vlib/v/checker/tests/assign_main_fn_err.vv
fn main() {
	a := main
	a()

	b := [main]
	println(b)
}
